--- a/styles.css
+++ b/styles.css
@@ -87,25 +87,81 @@ header{
     color: #162938;
 }
 
-/*Contenedor*/
 
+/*Contenedor*/
 .wrapper{
     position: relative;
     width: 400px;
     height: 440px;
     background: transparent;
-    border: 2px solid rgb(255, 255, 255, .5);
+    border: 2px solid rgba(255, 255, 255, .5);
     border-radius: 20px;
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 30px rgb(255, 255, 255, .5);
+    box-shadow: 0 0 30px rgba(0, 0, 0, .5);
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    transition: height .2s ease;
+    transform: scale(0);
+}
+
+.wrapper.active-popup{
+    transform: scale(1);
+}
+
+
+
+.wrapper.active{
+    height: 520px;
 }
 
 .wrapper .form-box{
     width: 100%;
     padding: 40px;
+}
+
+.wrapper .form-box.login{
+    transition: transform .18 ease;
+    transform: translateX(0);
+}
+
+.wrapper.active .form-box.login{
+    transition: none;
+    transform: translateX(-400px);
+}
+
+
+.wrapper .form-box.register{
+    position: absolute;
+    transition: none;
+    transform: translateX(400px);
+}
+
+.wrapper.active .form-box.register{
+    transition: transform .18s ease;
+    transform: translateX(0);
+}
+
+.icon-close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    background: #162938;
+    font-size: 2em;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius: 20px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.icon-close :hover{
+    color: aquamarine;
 }
 
 .form-box h2{
@@ -135,7 +191,7 @@ header{
 }
 
 .input-box input:focus~label,
-.input-box label:valid~label{
+.input-box input:valid~label{
     top: -5px;
 }
 
@@ -160,3 +216,61 @@ header{
     color: #162938;
     line-height: 57px;
 }
+
+.rember-forgot{
+    font-size: .9em;
+    color: #162938;
+    font-weight: 500;
+    margin: -15px 0 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.rember-forgot label input{
+    accent-color: #162938;
+    margin-right: 3px;
+}
+
+.rember-forgot a {
+    color: #162938;
+    text-decoration: none;
+}
+
+.rember-forgot a:hover {
+    text-decoration: underline;
+}
+
+.btn{
+    width: 100%;
+    height: 45px;
+    background: #162938;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: #fff;
+    font-weight: 500;
+}
+
+.login-register{
+    font-size: .9em;
+    color: #162938;
+    text-align: center;
+    font-weight: 500;
+    margin: 25px 0 10px;
+}
+
+.login-register p a{
+    color: #162938;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.login-register p a:hover{
+    text-decoration: underline;
+}
+
+
+
+
