--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,12 @@
 body{
     display: flex;
     justify-content: center;
+    align-items: center;
+    min-height: 100vh;
     background: url('img/background.jpg') no-repeat;
     background-size: cover; 
     background-position: center;
     /*Ajustes del contenedor */
-    flex-direction: column;
-    align-items: center;
     min-height: 100vh;
     margin: 0;
 
@@ -102,8 +102,9 @@ header{
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    transition: height .2s ease;
     transform: scale(0);
+    transition: transform .5s ease, height .2s ease;
+    
 }
 
 .wrapper.active-popup{
@@ -195,8 +196,6 @@ header{
     top: -5px;
 }
 
-
-
 .input-box input{
     width: 100%;
     height: 100%;
@@ -217,7 +216,7 @@ header{
     line-height: 57px;
 }
 
-.rember-forgot{
+.remember-forgot{
     font-size: .9em;
     color: #162938;
     font-weight: 500;
@@ -226,17 +225,17 @@ header{
     justify-content: space-between;
 }
 
-.rember-forgot label input{
+.remember-forgot label input{
     accent-color: #162938;
     margin-right: 3px;
 }
 
-.rember-forgot a {
+.remember-forgot a {
     color: #162938;
     text-decoration: none;
 }
 
-.rember-forgot a:hover {
+.remember-forgot a:hover {
     text-decoration: underline;
 }
 
